--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "prop-types": "^15.6.1",
+    "react-test-renderer": "^16.3.2"
   }
 }
